<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_e"
            android:text=""/>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_e_1"
            android:text="@string/dynamic_line1"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_e_1"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_e_2"
            android:text="@string/dynamic_line2"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_e_2"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_e_3"
            android:text="@string/dynamic_line3"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_e_3"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_e_4"
            android:text="@string/dynamic_line4"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_e_4"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_e_5"
            android:text="@string/dynamic_line5"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_e_5"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_e_6"
            android:text="@string/dynamic_line6"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_e_6"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_e_7"
            android:text="@string/dynamic_line7"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_e_7"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_e_8"
            android:text="@string/dynamic_line8"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_e_8"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_e_9"
            android:text="@string/dynamic_line9"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_e_9"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_e_10"
            android:text="@string/dynamic_line10"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_e_10"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_e_11"
            android:text="@string/dynamic_line11"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_e_11"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_e_12"
            android:text="@string/dynamic_line12"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_e_12"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_e_13"
            android:text="@string/dynamic_line13"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_e_13"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </LinearLayout>
</ScrollView>


